# vuefy

./: .gitignore  Makefile  README.md  cookiecutter.json  pyproject.toml
hooks/: post_gen_project.py
tests/: conftest.py  test_template.py
{{cookiecutter.project_slug}}/: .eslintignore  .eslintrc.cjs  Dockerfile  Makefile  README.md  buildVendor.js  docker-compose.dev.yml  gray.conf  package.json  pyproject.toml  vendor_js.py
{{cookiecutter.project_slug}}/tests/: conftest.py
{{cookiecutter.project_slug}}/tests/admin/: conftest.py
{{cookiecutter.project_slug}}/tests/admin/handlers/: test_ping.py  test_ws.py
{{cookiecutter.project_slug}}/tests/admin/middlewares/: test_vue_router.py
{{cookiecutter.project_slug}}/tests/api/: conftest.py  test_api.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: __init__.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/admin/: __init__.py  __main__.py  arguments.py  middlewares.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/admin/handlers/: __init__.py  index.py  static.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/admin/handlers/v1/: ping.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/admin/handlers/ws/: env.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/admin/services/: rest.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/admin/static/: App.js  loader.js  main.js  router.js
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/admin/static/api/: ws.js
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/admin/static/components/: SideMenu.vue
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/admin/static/styles/: base.css  index.css  utils.css
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/admin/static/views/: Home.vue
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/admin/templates/: index.html
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/admin/utils/: serializers.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/api/: __main__.py  arguments.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/api/handlers/v1/: ping.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/api/services/: rest.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/utils/: argparse.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/utils/http/: filters.py
