[tool.poetry]
name = "vuefy"
version = "0.1.0"
description = "Cookiecutter for aiohttp with ws and vue as front part"
authors = [
    "Ivan Sitkin <alvinera@yandex.ru>",
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.0"
cookiecutter = "2.1.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

