[tool.poetry]
name = "{{cookiecutter.project_slug}}"
version = "0.0.1"
description = "{{cookiecutter.project_description}}"
authors = ["{{cookiecutter.author_name}} <f{{cookiecutter.author_email}}>"]
readme = "README.md"
packages = [
  {include = "{{cookiecutter.project_slug}}"}
]
include = [
  "{{cookiecutter.project_slug}}/version.py",
  "{{cookiecutter.project_slug}}/admin/static",
  "{{cookiecutter.project_slug}}/admin/template",
]

[tool.poetry.dependencies]
python = "^3.11"
aiomisc = {extras = ["aiohttp", "raven"], version = "^17.0"}
aiomisc-dependency = "~0.1.17"
ConfArgParse = "^1.1.20"
fast-json = "^0.3.2"
forklib = "~0.5.0"
setproctitle = "^1.3"
pytz = "^2023"
pydantic = "^1.10.7"
wsrpc-aiohttp = "^3.2.0"

[tool.poetry.dev-dependencies]
aiomisc-pytest = "^1.1.1"
pytest = "^7.2"
pytest-cov = "^4.0.0"
mypy = "~1.2.0"
gray = "^0.13.0"
ruff = "0.0.263"

[tool.poetry.scripts]
{{ cookiecutter.project_slug }}_api = "{{ cookiecutter.project_slug }}.api.__main__:main"
{{ cookiecutter.project_slug }}_admin = "{{ cookiecutter.project_slug }}.admin.__main__:main"
vue_aiohttp_vendor = "vendor_js:main"

[tool.mypy]
allow_subclassing_any = true
allow_untyped_calls = true
allow_untyped_decorators = true
ignore_missing_imports = true
implicit_reexport = true
pretty = true
show_error_codes = true
strict = true
warn_return_any = false

[tool.pytest.ini_options]
python_files = "test_*"
python_functions = "test_*"
python_classes = "TestSuite*"
addopts = "-p no:cacheprovider"

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["{{cookiecutter.project_slug}}"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 80
target-version = "py311"
select = [
  "BLE",
  "C90",
  "E",
  "F",
  "G",
  "I",
  "ICN",
  "ISC",
  "PLE",
  "Q",
  "RUF006",
  "RUF100",
  "T10",
  "T20",
  "TID",
  "UP",
  "W",
]
ignore = ["E712", "UP007"]
flake8-quotes = { inline-quotes = "double", multiline-quotes = "double" }
